--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "paparao.pandiri449@gmail.com",
   "private": true,
   "scripts": {
-    "lint": "eslint --ext .js,.ts,.vue ./",
+    "lint": "eslint --ext .js,.ts,.vue ./ --fix",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
@@ -16,6 +16,7 @@
     "@quasar/extras": "^1.16.4",
     "@quasar/quasar-ui-qcalendar": "^4.0.0-beta.16",
     "axios": "^1.6.0",
+    "echarts": "^5.4.3",
     "pinia": "^2.1.7",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
