--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "paparao.pandiri449@gmail.com",
   "private": true,
   "scripts": {
-    "lint": "eslint --ext .js,.ts,.vue ./ --fix",
+    "lint": "eslint --ext .js,.ts,.vue ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
